--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
   *{
     margin: 0;
     box-sizing: border-box;
-    list-style-type: none;
   }
 
   header 
@@ -14,17 +13,40 @@
     background-color: #333;
     color:#fff;
     padding:10px;
+    position: fixed;
+    width: 100%;
+    z-index:1;
 }
+
+header p {margin: 0 auto; width:800px;}
+
+header p a {color:#fff;}
+
+#home {padding-left:20px; padding-top:100px;} 
+
+#education {margin-bottom:20px; margin-left:20px; margin-top:20px;} 
+
+h2 {padding-left:20px;}
+
+#personalDetails, #techStack, #projects  {padding-left:20px; padding-top:20px; margin-bottom:20px;}
+
+#personalDetails p {margin-left:20px; font-family: Arial, Helvetica, sans-serif; padding-top:10px; line-height:20px;}
 
 nav a {
   margin-right: 15px;
   font-family: "Roboto", sans-serif;
+  color:#fff;
 }
 
 /* Navigation Section */
 #navSection{
   padding: 10px;
-  text-align: right;
+  text-align: center;
+  position: fixed;
+  background-color: #666;
+  width: 100%;
+  z-index:1;
+  margin-top:40px;
 }
 #navSection li{
   display: inline;
@@ -42,6 +64,7 @@ nav a {
     font-style: italic;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
     font-family: "Roboto", sans-serif;
+    margin:10px;
   }
 
   .icons {
@@ -77,12 +100,14 @@ nav a {
 
   }
 
-  .roles{
+  /*.roles{
     list-style-type: lower-alpha;
-  }
+  } */
 
   .roles li{
    padding:8px;
   }
 
 footer p {font-family: "Poppins", sans-serif;}
+
+footer table, footer td, footer th, footer tr  {border: none; text-align: right; float: right;}
